[gd_scene load_steps=8 format=3]

[ext_resource type="Script" path="res://scripts/ui/GameOverMenu.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="panel_style"]
bg_color = Color(0.03, 0.03, 0.07, 0.97)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 0, 1, 0.4)
corner_radius_top_left = 35
corner_radius_top_right = 35
corner_radius_bottom_right = 35
corner_radius_bottom_left = 35
shadow_color = Color(1, 0, 1, 0.15)
shadow_size = 20
shadow_offset = Vector2(0, 6)

[sub_resource type="StyleBoxFlat" id="retry_normal"]
bg_color = Color(0, 0.9, 0.9, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_color = Color(0, 0.5, 0.5, 0.5)
shadow_size = 10
shadow_offset = Vector2(0, 4)

[sub_resource type="StyleBoxFlat" id="retry_hover"]
bg_color = Color(0, 1, 1, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_color = Color(0, 0.8, 0.8, 0.7)
shadow_size = 16

[sub_resource type="StyleBoxFlat" id="retry_pressed"]
bg_color = Color(0, 0.7, 0.7, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="menu_normal"]
bg_color = Color(0.08, 0.08, 0.14, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.3, 0.4, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="menu_hover"]
bg_color = Color(0.12, 0.12, 0.2, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0, 1, 0.5)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[node name="GameOverMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.88)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -340.0
offset_top = -380.0
offset_right = 340.0
offset_bottom = 380.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("panel_style")

[node name="TitleLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -280.0
offset_top = 35.0
offset_right = 280.0
offset_bottom = 120.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
theme_override_colors/font_color = Color(1, 0, 1, 1)
theme_override_colors/font_shadow_color = Color(0.5, 0, 0.5, 0.4)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 4
text = "GAME OVER"
horizontal_alignment = 1
pivot_offset = Vector2(280, 42)

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -140.0
offset_right = 280.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="ScoreLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 52
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "0"
horizontal_alignment = 1

[node name="ScoreSubLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
theme_override_colors/font_color = Color(0.45, 0.45, 0.55, 0.9)
text = "SCORE"
horizontal_alignment = 1

[node name="HighScoreLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(1, 0, 1, 0.8)
text = "BEST  0"
horizontal_alignment = 1

[node name="ComboLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
theme_override_colors/font_color = Color(1, 1, 0, 0.7)
text = "MAX COMBO  x0"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2

[node name="RetryButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(0.01, 0.01, 0.03, 1)
theme_override_colors/font_hover_color = Color(0.01, 0.01, 0.03, 1)
theme_override_colors/font_pressed_color = Color(0.01, 0.01, 0.03, 1)
theme_override_styles/normal = SubResource("retry_normal")
theme_override_styles/hover = SubResource("retry_hover")
theme_override_styles/pressed = SubResource("retry_pressed")
text = "PLAY AGAIN"

[node name="MenuButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 65)
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(0.6, 0.6, 0.7, 1)
theme_override_colors/font_hover_color = Color(1, 0, 1, 1)
theme_override_styles/normal = SubResource("menu_normal")
theme_override_styles/hover = SubResource("menu_hover")
text = "MAIN MENU"
